# llm-exercise

./: .dockerignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  post-create.sh
scripts/: test_rinna.py
